<resources>
    <string name="app_name">DesignBox</string>
    <string name="no_demos">No demos</string>
    <string name="test_title1">TestActivity1</string>
    <string name="test_description1">This is TestActivity1</string>
    <!-- Decorator Pattern strings @Start -->
    <string name="role">Role:</string>
    <string name="worrior">Worrior</string>
    <string name="mage">Mage</string>
    <string name="hunter">Hunter</string>
    <string name="warlock">WarLock</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="weapon">Weapon:</string>
    <string name="sword">Sword</string>
    <string name="sledge">Sledge</string>
    <string name="wand">Wand</string>
    <string name="bowarrow">BowArrow</string>
    <string name="button_generate">Generate</string>
    <string name="hero_details">Hero details</string>
    <string name="hero_title">Please create your Hero!!!</string>
    <string name="item_price">$ %.2f</string>
    <!-- weather info -->
    <string name="cityLabel">City</string>

    <string name="factory_pattern_simple">SimpleFactory</string>
    <string name="factory_pattern_method">FactoryMethod</string>
    <string name="factory_pattern_abstract">AbstractFactory</string>

    <string name="adaptive_pattern_adapter">Adapter</string>
    <string name="adaptive_pattern_facade">Facade</string>

    <string name="composite_pattern_des">Description</string>
    <string name="composite_pattern_demo">Demo</string>

    <string name="compound_pattern_des">Description</string>
    <string name="compound_pattern_demo_mvc">MVC</string>
    <string name="compound_pattern_demo_mvp">MVP</string>
    <string name="compound_pattern_demo_mvvm">MVVM</string>

    <string name="compound_pattern_name">Want to Want Me</string>
    <string name="compound_pattern_singer">Jason DeRulo</string>
    <string name="compound_pattern_lyrics">\"Want To Want Me\"\n
(Derulo)
\n
\n
It\'s too hard to sleep\n
I got the sheets on the floor\n
Nothing on me\n
And I can\'t take it no more\n
It\'s a hundred degrees\n
I got one foot out the door\n
Where are my keys?
Cause I gotta leave, yeah\n
\n
In the back of the cab\n
I tipped the driver ahead of time\n
Get me there fast\n
I got your body on my mind\n
I want it bad\n
Ooh, just the thought of you gets me so high, so high\n
\n
Girl, you\'re the one I want to want me\n
And if you want me, girl, you got me\n
There\'s nothin\' I, no, I wouldn\'t do, I wouldn\'t do\n
Just to get up next to you\n
\n
Girl, you\'re the one I want to want me\n
And if you want me, girl, you got me\n
There\'s nothin\' I, no, I wouldn\'t do, I wouldn\'t do\n
Just to get up next to you\n
Just to get up next to you\n
\n
You open the door\n
Wearing nothing but a smile, fell to the floor\n
And you whisper in my ear, \"Baby, I\'m yours.\"\n
Ooh, just the thought of you gets me so high, so high\n
\n
Girl, you\'re the one I want to want me\n
And if you want me, girl, you got me\n
There\'s nothin\' I, no, I wouldn\'t do, I wouldn\'t do\n
Just to get up next to you\n
\n
Girl, you\'re the one I want to want me\n
And if you want me, girl, you got me\n
There\'s nothin\' I, no, I wouldn\'t do, I wouldn\'t do\n
Just to get up next to you\n
Just to get up next to you\n
\n
Just the thought of you gets me so high, so high\n
Ooh, just the thought of you gets me so high, so high\n
\n
Girl, you\'re the one I want to want me\n
And if you want me, girl, you got me\n
There\'s nothin\' I, no, I wouldn\'t do, I wouldn\'t do\n
Just to get up next to you\n
\n
Girl, you\'re the one I want to want me\n
And if you want me, girl, you got me\n
There\'s nothin\' I, no, I wouldn\'t do, I wouldn\'t do\n
Just to get up next you (I would do anything)\n
Just to get up next you (anything and everything)\n
Just to get up next to you (baby)\n
Just to get up next to you\n
Get up, get up!</string>
</resources>
